<resources>
    <string name="app_name">TryOUrt</string>
    <string name="facebook_app_id">2966468950294970</string>
    <string name="fb_login_protocol_scheme">fb2966468950294970</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="login_area">Login Area</string>
    <string name="dark_app">Dark App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="signUp">Lanjut</string>
    <string name="signUp2">Sign Up</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="activity_name">Daftar Pendanaan</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">giatdana.com/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Beranda</string>
    <string name="navigation_view_item_2">Profil</string>
    <string name="navigation_view_item_3">Daftar</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="navigation_view_item_5">About</string>
    <string name="menu_home">Daftar Pendanaan</string>
    <string name="menu_gallery">Profil</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>


    <string name="bantuan">Bantuan</string>
    <string name="masukkan_angka">Masukkan Angka</string>
    <string name="angka_pertama">Angka Pertama</string>
    <string name="angka_kedua">Angka Kedua</string>
    <string name="jawaban_anda">Jawaban Anda</string>
    <string name="selesai">Selesai</string>
    <string name="_1_masukkan_angka_1_serta_angka_ke_2">1. Masukkan angka 1 serta angka ke 2</string>
    <string name="cara_menggunakan_aplikasi_ini">Cara Menggunakan Aplikasi Ini</string>
    <string name="_2_masukkan_tebakan_anda">2. Masukkan tebakan anda</string>
    <string name="klik_taombol_bantuan_untuk_mengetahui_jawaban_yang_benar">3. Klik taombol Bantuan untuk mengetahui jawaban yang benar</string>
    <string name="klik_taombol_cek_untukmengecek_jawaban_anda">4. Klik taombol Cek untukmengecek jawaban anda</string>
    <string name="klik_taombol_lanjut_untuk_menyimpan_data">5. Klik taombol Lanjut untuk menyimpan data</string>
    <string name="klik_taombol_selesai_untuk_mmelihat_data_jawaban_anda">6. Klik taombol Selesai untuk Mmelihat data jawaban anda</string>
    <string name="tentang_aplikasi_ini">Tentang Aplikasi Ini</string>
    <string name="aplikasi_ini_adalah_aplikasi_tebak_angka">Aplikasi ini adalah aplikasi tebak angka</string>
    <string name="kelas_xii_rpl_c">Kelas : XII RPL C</string>
    <string name="no_absen_31">No Absen : 31</string>
    <string name="tebakan_anda">Tebakan Anda</string>
    <string name="hasil">Hasil</string>
    <string name="random_pertama">Random Pertama</string>
    <string name="random_kedua">Random kedua</string>
    <string name="ad_banner">ca-app-pub-2766965421563368/9691684505</string>
    <string name="aplikasi_kuis_tebak_angka">Aplikasi kuis tebak angka</string>
    <string name="already_registered">Already registered</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="About_TryOUrt">Aplikasi TryOUrt adalah sebuah simple aplikasi tentang tebak angka, yag sangat mudah digunakan oleh segala usia, anak sampai lansia.</string>
    <string name="Youtube">Channel Youtube : <a href="https://www.youtube.com/c/DEVIL-X-Code">DEVIL-X-Code</a></string>
    <string name="GitHub">Github           : <a href="https://github.com/egmu">Egmu</a></string>
    \
    <string name="GitLab">GitLab           : <a href="https://gitlab.com/mkh.yusuf">Yusuf Rizal I </a></string>
    <string name="Blog">Website            : <a href="https://mytutoriakerenl.blogspot.com/">E.G.M.U_NoW  </a></string>
    <string name="nama_pembuat">Nama : Yusuf Rizal I</string>
    <string name="Changelog">Version 1.0, Database RealTime, Login &amp; Register width Firebase</string>
</resources>