<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/custom1"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".About">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#80FFFFFF"
        >
        <ImageView
            android:id="@+id/GfG_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo4" />
    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="About"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="49dp" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="center_horizontal"
        android:text="@string/About_TryOUrt"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/help"
        tools:ignore="InvalidId,MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="216dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#FFFFFF">
        <TextView
            android:id="@+id/help3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Changelog"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="49dp" />


        <TextView
            android:id="@+id/text19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:gravity="center_horizontal"
            android:text="@string/Changelog"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/help"
            tools:ignore="InvalidId,MissingConstraints,NotSibling"
            tools:layout_editor_absoluteX="216dp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#FFFFFF">
        <TextView
            android:id="@+id/text17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="Author"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25dp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds,MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="49dp" />
    <TextView
        android:id="@+id/text12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="left"
        android:text="@string/nama_pembuat"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/text1"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="left"
        android:text="@string/Youtube"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/text12"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="0dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="left"
        android:text="@string/GitHub"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/text13"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="0dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/GitLab"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/text14"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="0dp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="left"
        android:text="@string/Blog"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/text15"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>