<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom1"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:gravity="center"
        android:text="Tebak Angka"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="216dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"

        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="60dp"
            android:layout_weight="2"
            android:background="@color/gold"
            android:gravity="center"
            android:text="@string/random_pertama"
            android:textColor="@color/black"
            android:textSize="20sp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="60dp"
            android:layout_weight="2"
            android:background="@color/gold"
            android:gravity="center"
            android:text="@string/random_kedua"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/Edtangka1"
            android:layout_width="185dp"
            android:layout_height="100dp"
            android:layout_marginTop="91dp"
            android:layout_weight="2"
            android:inputType="numberDecimal"
            android:background="@color/teal_200"
            android:gravity="center"
            android:hint="0"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/operator"
            android:layout_width="39dp"
            android:layout_height="100dp"
            android:layout_marginTop="91dp"
            android:layout_weight="2"
            android:background="@color/gold"
            android:gravity="center"
            android:text="+"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Edtangka2"
            android:layout_width="185dp"
            android:layout_height="100dp"
            android:layout_marginTop="91dp"
            android:layout_weight="2"
            android:background="@color/teal_200"
            android:gravity="center"
            android:hint="0"
            android:inputType="numberDecimal"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gold"
        android:gravity="center"
        android:text="@string/tebakan_anda"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <!--    <EditText-->
<!--        android:id="@+id/Edtjawab"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="2"-->
<!--        android:background="@color/gold"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/lime2"-->
<!--        android:textSize="40sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="0dp" />-->


    <EditText
        android:id="@+id/Edt_jawaban"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:background="@color/teal_200"
        android:gravity="center"
        android:hint="0"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gold"
        android:text="cek"

        android:textColor="@color/white"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/Edt_jawaban"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/show_result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:hint="Jawawban"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@+id/show_tebak"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />
    <TextView
        android:id="@+id/show_tebak"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="2"
        android:text="@string/hasil"
        android:gravity="center"
        android:background="@color/lime2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/button_result"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/show_result"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="2dp">


        <Button
            android:id="@+id/btnLanjut"
            android:layout_width="185dp"
            android:layout_height="50dp"

            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_lanjut_64"
            android:gravity="center"
            android:onClick="Click1"
            android:text="Lanjut"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@color/orange" />

        <Button
            android:id="@+id/menampilkanToast"
            android:layout_width="185dp"
            android:layout_height="50dp"

            android:layout_weight="2"
            android:drawableBottom="@drawable/ic_baseline_vpn_key_24"

            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/red"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnSelesai"
            android:layout_width="185dp"
            android:layout_height="50dp"

            android:layout_weight="2"
            android:drawableRight="@drawable/ic_selesai"
            android:gravity="center"
            android:onClick="Selesai"
            android:text="@string/selesai"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/gold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>